--- a/HiemMauNhanDao/HiemMauNhanDao/Assets/client/css/style.css
+++ b/HiemMauNhanDao/HiemMauNhanDao/Assets/client/css/style.css
@@ -5200,12 +5200,13 @@ h1, h2, h3, h4, h5, h6 {
 
 /* line 884, ../../01 cl html template/03_jun 2019/182_medico_html/sass/_elements.scss */
 .primary-radio {
-  width: 16px;
-  height: 16px;
-  border-radius: 8px;
-  background: #f9f9ff;
-  position: relative;
-  cursor: pointer;
+    height: 20px;
+    width: 20px;
+    vertical-align: middle;
+    border-radius: 8px;   
+    background: #f9f9ff;
+    position: relative;
+    cursor: pointer;
 }
 
 /* line 891, ../../01 cl html template/03_jun 2019/182_medico_html/sass/_elements.scss */
